<resources>
    <string name="app_name">My Calculator</string>
    <string name="_0">0</string>
    <string name="parcentage">%</string>
    <string name="ce">CE</string>
    <string name="c">C</string>
    <string name="backspace_button"><![CDATA[<--]]></string>
    <string name="_1_x">1/x</string>
    <string name="x_2">X^2</string>
    <string name="squart">√</string>
    <string name="division">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="substraction_button">-</string>
    <string name="addition">+</string>
    <string name="multiplication">X</string>
    <string name="plus_minus">+/-</string>
    <string name="point">.</string>
    <string name="equals">=</string>
    <string name="sign" />
</resources>