<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/calculator_image_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.144" />

    <TextView
        android:id="@+id/first_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:layout_marginRight="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/secons_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:text="@string/_0"
        app:layout_constraintTop_toBottomOf="@id/first_number"
        app:layout_constraintRight_toRightOf="parent"

        />
    <EditText
        android:id="@+id/secons_number_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/_0"
        android:textSize="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/secons_number"
        />

    <Button
        android:id="@+id/parcentage_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parcentage"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/secons_number_input"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/clear_entry_button"
        android:onClick="cal_percentage"
        />

    <Button
        android:id="@+id/clear_entry_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ce"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/secons_number_input"
        app:layout_constraintLeft_toRightOf="@id/parcentage_button"
        app:layout_constraintRight_toLeftOf="@id/clear_button"
        android:onClick="clear_entry"
        />
    <Button
        android:id="@+id/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/secons_number_input"
        app:layout_constraintLeft_toRightOf="@id/clear_entry_button"
        app:layout_constraintRight_toLeftOf="@id/backspace_button"
        android:onClick="clear"
        />
    <Button
        android:id="@+id/backspace_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backspace_button"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/secons_number_input"
        app:layout_constraintLeft_toRightOf="@id/clear_button"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="backspace"
        />
    <Button
        android:id="@+id/inverse_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1_x"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/parcentage_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/square_button"
        android:onClick="inverse"
        />
    <Button
        android:id="@+id/square_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x_2"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/clear_entry_button"
        app:layout_constraintLeft_toRightOf="@id/inverse_button"
        app:layout_constraintRight_toLeftOf="@id/square_root_button"
        android:onClick="square"
        />
    <Button
        android:id="@+id/square_root_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/squart"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/clear_button"
        app:layout_constraintLeft_toRightOf="@id/square_button"
        app:layout_constraintRight_toLeftOf="@id/division_buttom"
        android:onClick="square_root"
        />
    <Button
        android:id="@+id/division_buttom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:text="@string/division"
        app:layout_constraintTop_toBottomOf="@id/backspace_button"
        app:layout_constraintLeft_toRightOf="@id/square_root_button"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="division"
        />
    <Button
        android:id="@+id/seven_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:text="@string/_7"
        app:layout_constraintTop_toBottomOf="@id/inverse_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/eight_button"
        android:onClick="add_seven"
        />
    <Button
        android:id="@+id/eight_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:text="@string/_8"
        app:layout_constraintTop_toBottomOf="@id/square_button"
        app:layout_constraintLeft_toRightOf="@id/seven_button"
        app:layout_constraintRight_toLeftOf="@id/nine_button"
        android:onClick="add_eight"
        />
    <Button
        android:id="@+id/nine_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:text="@string/_9"
        app:layout_constraintTop_toBottomOf="@id/square_root_button"
        app:layout_constraintLeft_toRightOf="@id/eight_button"
        app:layout_constraintRight_toLeftOf="@id/multiplication_button"
        android:onClick="add_nine"
        />
    <Button
        android:id="@+id/multiplication_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:text="@string/multiplication"
        app:layout_constraintTop_toBottomOf="@id/division_buttom"
        app:layout_constraintLeft_toRightOf="@id/nine_button"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="multiplication"
        />
    <Button
        android:id="@+id/four_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:text="@string/_4"
        app:layout_constraintTop_toBottomOf="@id/seven_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/five_button"
        android:onClick="add_four"
        />
    <Button
        android:id="@+id/five_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:text="@string/_5"
        app:layout_constraintTop_toBottomOf="@id/eight_button"
        app:layout_constraintLeft_toRightOf="@id/four_button"
        app:layout_constraintRight_toLeftOf="@+id/six_button"
        android:onClick="add_five"
        />
    <Button
        android:id="@+id/six_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:text="@string/_6"
        app:layout_constraintTop_toBottomOf="@id/nine_button"
        app:layout_constraintLeft_toRightOf="@id/five_button"
        app:layout_constraintRight_toLeftOf="@id/substraction_button"
        android:onClick="add_six"
        />
    <Button
        android:id="@+id/substraction_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:text="@string/substraction_button"
        app:layout_constraintTop_toBottomOf="@id/multiplication_button"
        app:layout_constraintLeft_toRightOf="@id/six_button"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="subtraction"
        />
    <Button
        android:id="@+id/one_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:text="@string/_1"
        app:layout_constraintTop_toBottomOf="@id/four_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/two_button"
        android:onClick="add_one"
        />
    <Button
        android:id="@+id/two_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:text="@string/_2"
        app:layout_constraintTop_toBottomOf="@id/five_button"
        app:layout_constraintLeft_toRightOf="@id/one_button"
        app:layout_constraintRight_toLeftOf="@id/three_button"
        android:onClick="add_two"
        />
    <Button
        android:id="@+id/three_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:text="@string/_3"
        app:layout_constraintTop_toBottomOf="@id/six_button"
        app:layout_constraintLeft_toRightOf="@id/two_button"
        app:layout_constraintRight_toLeftOf="@id/addition_button"
        android:onClick="add_three"
        />
    <Button
        android:id="@+id/addition_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:text="@string/addition"
        app:layout_constraintTop_toBottomOf="@id/substraction_button"
        app:layout_constraintLeft_toRightOf="@id/three_button"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="addition"
        />
    <Button
        android:id="@+id/plus_minus_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:text="@string/plus_minus"
        app:layout_constraintTop_toBottomOf="@id/one_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/zero_button"
        android:onClick="plus_minus"
        />
    <Button
        android:id="@+id/zero_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:text="@string/_0"
        app:layout_constraintTop_toBottomOf="@id/two_button"
        app:layout_constraintLeft_toRightOf="@id/plus_minus_button"
        app:layout_constraintRight_toLeftOf="@id/point_button"
        android:onClick="add_zero"
        />
    <Button
        android:id="@+id/point_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:text="@string/point"
        app:layout_constraintTop_toBottomOf="@id/three_button"
        app:layout_constraintLeft_toRightOf="@id/zero_button"
        app:layout_constraintRight_toLeftOf="@id/equals_button"
        android:onClick="add_point"
        />
    <Button
        android:id="@+id/equals_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:text="@string/equals"
        app:layout_constraintTop_toBottomOf="@id/addition_button"
        app:layout_constraintLeft_toRightOf="@id/point_button"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="result"
        />

    <TextView
        android:id="@+id/Sign_View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign"
        android:textSize="40sp"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="78dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/first_number"
        app:layout_constraintBottom_toTopOf="@id/secons_number"
        app:layout_constraintLeft_toLeftOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>